18 Apr 2004 Sylvain Pion
- Rename Huge_val to infinity, and move it to FPU.h.

18 Apr 2004 Sylvain Pion
- Remove explicit compilers tests :
  - use CGAL_CFG_DENORMALS_COMPILE_BUG instead.
  - is_valid() : no need to optimize unportably.

13 Apr 2004 Menelaos Karavelas
- Made changes suggested by Sylvain for icc; namely, replaced occurences
  of HUGE_VAL by std::numeric_limits<double>::infinity()

9 Apr 2004 Sylvain Pion
- PGCC workarounds.

17 Feb 2004 Sylvain Pion
- Remove CGAL_CFG_NO_PARTIAL_CLASS_TEMPLATE_SPECIALISATION

1 Feb 2004  Sylvain Pion
- Give more control over the precision of to_double(Lazy_exact_nt)
- Lazy_exact_nt's update_exact() now also updates the interval.

Version 4.191 on 26 January 2004
- #include <CGAL/Filtered_exact.h> from Lazy_exact_nt.h to get the overloaded
  predicates.

Version 4.190 on 25 January 2004
- Kernel_checker : print the typeid() in case of failure.

Version 4.189 on 18 January 2004
- Remove obsolete workarounds related to CGAL_CFG_MATCHING_BUG_2 (VC++ <= 7.0).

Version 4.188 on 15 January 2004
- Fix FPU.h on g++ and Solaris 5.9.

Version 4.187 on 18 December 2003
- Filtered_exact stores its potential cache as private base, to benefit from
  the empty base class optimization.

Version 4.186 on 27 November 2003
- FreeBSD fix.

Version 4.185 on 20 November 2003
- VC++ fix.

Version 4.184 on 17 November 2003
- FPU.h : by default, use the ISO C99 version (which should make Darwin work).

============================= CGAL 3.0 ===========================

Version 4.183 on 22 October 2003
- New headers (script filtered_predicate_generator.pl).

Version 4.182 on 18 September 2003
- New headers (script filtered_predicate_generator.pl).

Version 4.181 on 18 September 2003
- New headers

Version 4.180 on 10 September 2003
- Interval_nt : move operator+-*/ out of the class, and add mixed operators
  with int and double.  Add ctor from int.

Version 4.179 on 27 August 2003
- CGAL::NTS updates.

Version 4.178 on 7 August 2003